# Steam-MarketPlace-bot

./: .env.example  .gitignore  COMPLIANCE.md  README.md  _apply_core.py  _fix_tests.py  docker-compose.yml  pyproject.toml  requirements.txt
dashboard/: app.py
deploy/: docker-compose.prod.yml  env.prod.example  initial_deploy.sh  migrate_import.sh  status.sh  steam-scanner.service  update.sh  update_code.sh  update_db.sh
docs/: endpoints.md  vps-eu-audit.md
scripts/: export_db.ps1  init_db.py  run.ps1  run_bulk_collect.py  run_continue.py  run_discovery.py  run_full_pipeline.py  run_orderbook_scan.py  run_price_scan.py  status.py  test_proxies.py  validate_mvp.py
sql/: schema.sql
src/steam_scanner/: checkpoints.py  compliance.py  config.py  log_setup.py  progress.py
src/steam_scanner/analytics/: currency.py  data_quality.py  fee_engine.py  orderbook_metrics.py  scoring.py
src/steam_scanner/collectors/: app_discovery.py  listing_parser.py  market_search.py  orderbook.py  price_overview.py
src/steam_scanner/db/: models.py  session.py
src/steam_scanner/export/: csv_export.py
src/steam_scanner/pipeline/: runner.py
src/steam_scanner/steam/: client.py  endpoint_kind.py  endpoints.py  parallel.py  parsers.py  proxy_pool.py
tests/: test_client_429.py  test_compliance.py  test_fee_engine.py  test_parallel.py  test_parsers.py  test_price_overview_skip.py
tests/fixtures/: listing_page.html  market_search_results.json  market_search_row.html  order_histogram.json  price_overview_usd.json
